rnsc/test_data/rns_integration/error/parser/inner_class_sub_directive/trailing_tokens.rns
; Tests that trailing tokens after .inner_class are detected and reported.
; Expected error: E-038 (inner_class trailing tokens)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .inner_class com/profs/Main$Inner trailing
.inner_classes_attr_end

.class_end
